# u-boot-2017.09

./: .gitignore  AndroidBoot.mk  Makefile  README  README.md
arch/arm/: Kconfig  config.mk
arch/arm/cpu/arm920t/: Makefile
arch/arm/cpu/arm920t/xf2440/: Makefile  config.mk  cpu_info.c  timer.c  xf2440.c
arch/arm/cpu/armv7/: Makefile
arch/arm/cpu/armv7/xf210/: Kconfig  Makefile  cpu.c  timer.c
arch/arm/include/asm/arch-xf210/: cpu.h
bl1/: .gitignore  README.md  clock.c  main.c  s3c2440.lds  start.S  uart.c
bl1/mkhead/: Makefile
bl1/s3c2440/: .gitignore  CMakeLists.txt  Makefile  lowlevel_init.S  main.c  s3c2440.h  s3c2440.lds  uart.c
bl1/s3c2440/drivers/: uart.c
bl1/s3c2440/src/: CMakeLists.txt  Makefile
bl1/s3c2440/src/cpu/: CMakeLists.txt  s3c2440.lds  start.S
bl1/s3c2440/src/drivers/: CMakeLists.txt
bl1/s3c2440/src/user/: CMakeLists.txt
bl1/s3c2440/startup/: start.S
bl1/s3c2440/user/: main.c
bl1/s5pv210/: Makefile  copy.c
bl1/s5pv210/mkhead/: addheader.c
bl1/startup/: lowlevel_init.S  nand_cp.c  start.S
bl1/user/: interrupts.c  main.c
board/tq210/: Kconfig  Makefile  lowlevel_init.S  tq210.c
board/tq2440/: Kconfig  Makefile  lowlevel_init.S  tq2440.c
cmd/fastboot/: Kconfig
common/: fb_nand.c
configs/: tq210_defconfig  tq2440_defconfig
drivers/mtd/: Kconfig
drivers/mtd/nand/: Kconfig  Makefile  tq210_nand.c  xf2440_nand.c
drivers/serial/: Kconfig  Makefile  serial_xf2440.c  tq210_serial.c
drivers/usb/gadget/: Kconfig  Makefile  s5pv210_udc_otg.c  xf2440_udc.c
include/configs/: tq210.h  tq2440.h
