SET(CMAKE_SYSTEM_NAME Generic)
SET(CMAKE_SYSTEM_PROCESSOR arm)
SET(CMAKE_CROSSCOMPILING TRUE)

ENABLE_LANGUAGE(ASM)

set(CMAKE_ASM_COMPILER "${CROSS_COMPILE}gcc")
set(CMAKE_C_COMPILER "${CROSS_COMPILE}gcc")
set(CMAKE_CXX_COMPILER "${CROSS_COMPILE}g++")
set(CMAKE_LINKER "${CROSS_COMPILE}ld")
SET(CMAKE_OBJCOPY "${CROSS_COMPILE}objcopy")
set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <LINK_FLAGS> <OBJECTS> <LINK_LIBRARIES> -o <TARGET> ")

PROJECT(none)
set(CMAKE_C_FLAGS "-Wall -nostdlib -g -Os -fno-builtin-printf")
ADD_SUBDIRECTORY(src)
